fixing text align

--- a/css/RecruiterRig.css
+++ b/css/RecruiterRig.css
@@ -25,3 +25,6 @@
     padding-bottom: 50px;
 }
 
+.form-outline{
+    text-align: right;
+}
